--- a/DemoWASM/wwwroot/index.html
+++ b/DemoWASM/wwwroot/index.html
@@ -20,6 +20,14 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.usebootstrap.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDQIz3bxUElBcxofJ4plvhT0da4gJPs7zg"
+            async></script>
+    <script src="./_content/LibreriaComponenti/myFunctions.js"></script>
+
 </body>
 
 </html>
